erDiagram
  account {
    id uuid
    provider text
    provider_account_id text
    user_id uuid
    access_token text
    refresh_token text
    id_token text
    access_token_expires_at timestamp without time zone
    refresh_token_expires_at timestamp without time zone
    scope text
    token_type text
    session_state text
    password text
    created_at timestamp without time zone
    updated_at timestamp without time zone
    tenant_id text
  }
  api_key {
    id uuid
    key_hash text
    name character varying
    team_id uuid
    scope USER-DEFINED
    created_at timestamp without time zone
    last_used_at timestamp without time zone
    revoked_at timestamp without time zone
    is_revoked boolean
  }
  authenticator {
    credential_id text
    user_id uuid
    provider_account_id text
    credential_public_key text
    counter integer
    credential_device_type USER-DEFINED
    credential_backed_up boolean
    transports ARRAY
  }
  billing {
    id uuid
    user_id uuid
    team_id uuid
    subscription_id uuid
    plan_id uuid
    amount numeric
    currency text
    billing_period text
    paid boolean
    invoice_url text
    provider text
    created_at timestamp with time zone
    updated_at timestamp with time zone
  }
  deployment {
    id uuid
    imageUrl text
    status USER-DEFINED
    tenantId uuid
    projectId uuid
    createdAt timestamp without time zone
    updatedAt timestamp without time zone
  }
  deployment_log {
    id uuid
    deployment_id uuid
    service_name character varying
    container_name character varying
    daemon character varying
    request_id text
    level text
    message text
    created_at timestamp without time zone
  }
  invitation {
    id uuid
    organization_id uuid
    email text
    role text
    status text
    expires_at timestamp without time zone
    inviter_id uuid
  }
  metric {
    id uuid
    deployment_id uuid
    cpu_usage real
    memory_usage real
    disk_usage real
    network_in real
    network_out real
    uptime real
    created_at timestamp without time zone
  }
  organization {
    id uuid
    name text
    slug text
    logo text
    created_at timestamp without time zone
    metadata json
  }
  passkey {
    id uuid
    name text
    credential_id text
    public_key text
    counter integer
    device_type text
    backed_up boolean
    transports json
    user_id uuid
    created_at timestamp without time zone
  }
  plan {
    id uuid
    name text
    description text
    price real
    interval text
    stripe_price_id text
    features jsonb
    feature_list jsonb
    max_projects integer
    max_deployments integer
    max_team_members integer
    is_trial boolean
    trial_days integer
    created_at timestamp without time zone
  }
  project {
    id uuid
    name text
    tenantId text
    ownerId text
    createdAt timestamp without time zone
    updatedAt timestamp without time zone
  }
  project_environment {
    id uuid
    project_id uuid
    name text
    type USER-DEFINED
    env_vars jsonb
    is_active boolean
    deleted_at timestamp without time zone
    created_at timestamp without time zone
  }
  rate_limit {
    identifier uuid
    tokens integer
    last_refill timestamp without time zone
    created_at timestamp without time zone
    updated_at timestamp without time zone
  }
  session {
    id uuid
    sessionToken text
    userId uuid
    expires timestamp without time zone
    tenantId text
    created_at timestamp without time zone
    updated_at timestamp without time zone
    ip_address text
    user_agent text
    active_organization_id text
    impersonated_by text
  }
  subscription {
    id uuid
    plan text
    reference_id text
    stripe_customer_id uuid
    stripe_subscription_id text
    status text
    period_start timestamp without time zone
    period_end timestamp without time zone
    cancel_at_period_end boolean
    seats integer
  }
  team {
    id uuid
    name character varying
    owner_id uuid
    is_deleted boolean
    tenant_id uuid
    created_at timestamp without time zone
  }
  team_member {
    id uuid
    user_id uuid
    team_id uuid
    role character varying
    invited_by_user_id text
    status USER-DEFINED
    joined_at timestamp without time zone
  }
  user {
    id uuid
    name text
    first_name text
    last_name text
    email text
    emailVerified timestamp without time zone
    image text
    password text
    role USER-DEFINED
    stripe_customer_id text
    stripe_subscription_id text
    stripe_price_id text
    stripe_current_period_end timestamp without time zone
    created_at timestamp without time zone
    updated_at timestamp without time zone
    tenantId uuid
    banned boolean
    banReason text
    twoFactorEnabled boolean
  }
  user_account {
    id uuid
    userId text
    accountId text
    tenantId text
  }
  verification_token {
    identifier text
    token text
    expires timestamp without time zone
    tenantId text
  }
  webhook_event {
    id uuid
    tenant_id uuid
    source text
    event_type text
    unique_request_id uuid
    payload jsonb
    processed boolean
    response_status integer
    received_at timestamp without time zone
    processed_at timestamp without time zone
  }
  account }o--|| "user" : "user_id to id"
  session }o--|| "user" : "userId to id"
  billing }o--|| "user" : "user_id to id"
  billing }o--|| team : "team_id to id"
  billing }o--|| subscription : "subscription_id to id"
  billing }o--|| plan : "plan_id to id"
  team_member }o--|| "user" : "user_id to id"
  team_member }o--|| team : "team_id to id"
  api_key }o--|| team : "team_id to id"
  deployment_log }o--|| deployment : "deployment_id to id"
  metric }o--|| deployment : "deployment_id to id"
  project_environment }o--|| project : "project_id to id"
  authenticator }o--|| "user" : "user_id to id"
  passkey }o--|| "user" : "user_id to id"
  invitation }o--|| organization : "organization_id to id"
  invitation }o--|| "user" : "inviter_id to id"
